fix time handlers
