# docs/swagger.yaml
@@ -81,10 +81,10 @@ definitions:
     type: object
   handler.timeTask:
     properties:
-      start_time:
-        type: string
       task_id:
         type: integer
+      time:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -462,14 +462,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: End recording time for a task
+      description: End recording time for a task. FORMAT TIME - RFC 3339 "2024-08-01T08:00:00Z".
       parameters:
       - description: Task to end time entry for
         in: body
         name: task
         required: true
         schema:
-          $ref: '#/definitions/entities.Task'
+          $ref: '#/definitions/handler.timeTask'
       produces:
       - application/json
       responses:
@@ -492,7 +492,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get time spent on tasks by a person within a specific time range
+      description: Get time spent on tasks by a person within a specific time range.
+        FORMAT TIME - RFC 3339 "2024-08-01T08:00:00Z".
       parameters:
       - description: People ID
         in: query
